changed DB schema and related code to accomodate the updated db schema
